test/mutation_analysis/s0202_happy_number/hafis/starchat/mutants/22/result.txt
./test/mutation_analysis/s0202_happy_number/hafis/starchat/mutants/22/Solution.java:32: error: unreachable statement
            if (sum != 1) {
            ^
1 error
